WTForms Changelog
=================

Version 1.0.2
-------------
Not yet released

- Add in ability to convert relationships to ext.sqlalchemy model_form

Version 1.0.1
-------------
Released February 29, 2012

- Fixed issues related to building for python 3 and python pre-releases.

- Add object_data to fields to get at the originally passed data.

Version 1.0
-----------
Released February 28, 2012

- Output HTML5 compact syntax by default.

- Substantial code reorg, cleanup, and test improvements

- Added ext.csrf for a way to implement CSRF protection

- ext.sqlalchemy:
  * Support PGInet, MACADDR, and UUID field conversion
  * Support callable defaults

- ext.appengine:
  * model_form now supports generating forms with the same ordering as model.
  * ReferencePropertyField now gets get_label like the other ORM fields

- Add localization support for WTForms built-in messages

- Python 3 support (via 2to3)

- Minor changes/fixes:
  * An empty label string can be specified on fields if desired
  * Option widget can now take kwargs customization
  * Field subclasses can provide default validators as a class property
  * DateTimeField can take time in microseconds
  * Numeric fields all set .data to None on coercion error for consistency.


Version 0.6.3
-------------
Released April 24, 2011

- Documentation: Substantial documentation improvements, including adding
  Crash Course as a sphinx document.

- ext.django: QuerySetSelectField (and ModelSelectField) now accept get_label
  similar to sqlalchemy equivalents.

- ext.appengine:
 * model_form fixes: FloatField(#50), TimeField, DateTimeField(#55)
 * ReferencePropertyField: now properly stores model object, not key. (#48)


Version 0.6.2
-------------
Released January 22, 2011

- Bug Fixes:
 * ext.appengine: various field fixes (#34, #48), model_form changes (#41)
 * Fix issue in Optional with non-string input.
 * Make numeric fields more consistent.

- Tests: Improve test coverage substantially.

Version 0.6.1